@@ -1,4 +1,7 @@
 2006-11-05  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_PersonView.py: provide a default surname for and Add
+	Person button press based of selected item in the Person View tree.
+	* help/C/various: remove unused files from manual
 	* src/DataViews/_PlaceView.py: drag-n-drop support
 	* src/GrampsWidgets.py: drag-n-drop support for place selector widget
 	* src/ScratchPad.py: drag-n-drop support for places
